# geoshop-back

./: .env.sample  Dockerfile  Makefile  README.md  default_settings.py  docker-compose.yml  oidc.py  pyproject.toml  urls.py
api/: admin.py  helpers.py  models.py  serializers.py  views.py
api/locale/de/LC_MESSAGES/: django.po
api/locale/fr/LC_MESSAGES/: django.po
api/locale/it/LC_MESSAGES/: django.po
api/locale/rm/LC_MESSAGES/: django.po
api/management/commands/: fixturize.py  seed.py
api/migrations/: 0002_auto_20200731_0904.py  0050_order_excludedgeom_alter_orderitem_download_guid_and_more.py  0051_alter_order_excludedgeom.py  0052_product_max_order_area_alter_order_part_vat_currency_and_more.py  0053_identity_language.py  0054_order_extract_result_size_and_more.py  0055_metadata_update_search_vector_on_change_and_more.py  0056_alter_identity_language_and_more.py
api/templates/: email_admin.html  email_download_ready.html  email_quote_done.html  email_user_change.html  email_user_confirm.html  email_user_footer.html  email_validation_needed.html  email_welcome_user.html
api/tests/: factories.py  test_auth.py  test_extract.py  test_metadata.py  test_order.py  test_product_group.py  test_response_file.py  test_translations.py  test_user.py  test_user_contact.py
locale/en/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
locale/rm/LC_MESSAGES/: django.po
resources/db/: 01_init_db.sql
testdata/: openid-fakekey.json  openid-wellknown.json
