[tool.poetry]
name = "geoshop-back"
version = "0.1.0"
description = "Backend for the geoshop service"
authors = ["Andrey Rusakov <andrey.rusakov@camptocamp.com>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "^3.11.0"
attrs = "^24.3.0"
babel = "^2.17.0"
certifi = "^2024.12.14"
cffi = "^1.17.0"
charset-normalizer = "^3.4.4"
cryptography = "^44.0.3"
defusedxml = "^0.7.1"
django-allauth = "^64.0.0"
django-cors-headers = "^4.9.0"
django-filter = "^24.3"
django-health-check = "^3.20.0"
django-money = "^3.5.4"
djangorestframework = "^3.16.1"
djangorestframework-gis = "^1.2"
djangorestframework-simplejwt = "^5.5.1"
drf-spectacular = "^0.29.0"
gunicorn = "^23.0.0"
idna = "^3.11"
inflection = "^0.5.1"
jsonschema = "^4.25.1"
jsonschema-specifications = "^2023.12.1"
Markdown = "^3.10"
oauthlib = "^3.3.1"
psycopg2-binary = "^2.9.11"
pycparser = "^2.23"
PyJWT = "^2.10.1"
py-moneyed = "^3.0"
python3-openid = "^3.2.0"
python-dotenv = "^1.2.1"
pytz = "^2024.1"
PyYAML = "^6.0.3"
referencing = "^0.37.0"
requests = "^2.32.5"
requests-oauthlib = "^2.0.0"
rpds-py = "^0.30.0"
sqlparse = "^0.5.4"
typing-extensions = "^4.15.0"
Unidecode = "^1.4.0"
uritemplate = "^4.2.0"
urllib3 = "^2.6.0"
whitenoise = "^6.10.0"
Django = "^5.2"
mozilla-django-oidc = "^4.0.1"
Authlib = "^1.6.5"
django-extended-ol = "^1.0.0"
shapely = "^2.1.2"
django-pgtrigger = "^4.16.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
